--- a/module-3 sol/index.html
+++ b/module-3 sol/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> module-3 assignment</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="C:\bootstrap\bootstrap-4.5.0-dist">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
