--- a/index.html
+++ b/index.html
@@ -4,74 +4,80 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> module-3 assignment</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="final.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <header >
-        <nav id="header-nav" class="navbar navbar-default">
-			<div class="navbar-brand" ><h1>FOOD,LLC</h1></div>
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </button>
-			
-			  <div id="collapsable-nav" class="collapse navbar-collapse">
-				<ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-				 <li class="text-center">
-				   <a href="#chicken-div"><p class="item">Chicken</p></a>
-				   <hr class="visible-xs">
-				 </li>            
-				 <li class="text-center beef-item">
-				   <a href="#beef-div"><p class="item">Beef</p></a>
-				   <hr class="visible-xs">
-				 </li>
-				 <li class="text-center sushi-item">
-				   <a href="#sushi-div"><p class="item">Sushi</p></a>
-				 </li>
-			   </ul> 
-			 </div>
-		
-        </nav>
-    </header>
-    <h1>Our Menu</h1>
-	<div class="row">
-	<div class="container col-lg-4 col-md-6 col-sm-12">
-		<section>
-		<div id="chicken">
-			Chicken
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
-		</p>
-		</section>
-	</div>
-	<div class="container col-lg-4 col-md-6 col-sm-12">
-		<section>
-		<div id="beef">
-			Beef
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
-		</p>
-		</section>
-	</div>
-	<div class="container col-lg-4 col-md-12 col-sm-12">
-		<section>
-		<div id="sushi">
-			Sushi
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
-		</p>
-		</section>
-	</div>
-    </div>
 
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-collapsable-nav" aria-expanded="false">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+               </button>
+               <a href="#" class="text-left navbar-brand"><h1>Food, LLC</h1></a>
+             </div><!-- /.nav-header -->
+             <div id="menu-collapsable-nav" class="collapse navbar-collapse">
+               <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">      
+                 <li>            
+                   <a href="#">Chicken</a>
+                 </li>
+                 <li>            
+                  <a href="#">Beef</a>
+                </li>
+                <li>            
+                 <a href="#">Sushi</a>    
+               </li>
+             </ul>
+           </div>
+         </div><!-- /.container-->
+       </nav>
+    </header>
+
+    <!--B O D Y-->
+
+    <h1>Our Menu</h1>
+
+    <div class="row">
+        <div class="container col-lg-4 col-md-6 col-sm-12">
+            <section>
+            <div id="chicken">
+                Chicken
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+            </p>
+            </section>
+        </div>
+        <div class="container col-lg-4 col-md-6 col-sm-12">
+            <section>
+            <div id="beef">
+                Beef
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+            </p>
+            </section>
+        </div>
+        <div class="container col-lg-4 col-md-12 col-sm-12">
+            <section>
+            <div id="sushi">
+                Sushi
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+            </p>
+            </section>
+        </div>
+        </div>
     
-	<script src="js/bootstrap.min.js"></script>
-  	
+
 </body>
+</html>
